<resources>
    <string name="app_name">RenderDemo</string>
    <string name="tip_still_image">渲染静止图像</string>
    <string name="tip_camera_preview">相机预览</string>
    <string name="tip_share_render_ctx">共享渲染环境</string>
    <string name="tip_off_screen_render">离屏渲染</string>

    <string name="tip_beauty">美化</string>
    <string name="tip_contrast">对比度</string>
    <string name="tip_sharpen">锐化</string>
    <string name="tip_saturation">饱和度</string>

    <string name="tip_brightness">亮度</string>
    <string name="tip_exposure">曝光</string>
    <string name="tip_inc_shadow">调亮阴影</string>
    <string name="tip_dec_highlight">调暗高光</string>

    <string name="tip_blur">模糊</string>
    <string name="tip_hor_blur">水平模糊</string>
    <string name="tip_ver_blur">垂直模糊</string>

    <string name="tip_face">人脸</string>
    <string name="tip_face_lift_intensity">瘦脸强度</string>
    <string name="tip_face_beautify_intensity">美肤强度</string>
    <string name="tip_skin_buf_intensity">磨皮强度</string>

    <string name="tip_clear">还原</string>
    <string name="tip_switch_camera">切换</string>
    <string name="tip_detect_face">检测人脸</string>
    <string name="tip_beautify_face">人脸美白</string>

    <string name="tip_main_env">主环境</string>
    <string name="tip_share_env_one">共享环境一</string>
    <string name="tip_share_env_two">共享环境二</string>
    <string name="tip_share_env_two_sub">共享环境二子环境</string>
    <string name="msg_open_camera">打开相机</string>
    <string name="msg_close_camera">关闭相机</string>
</resources>