<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <Button
        android:id="@+id/btn_start_still_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/border_margin"
        android:layout_marginTop="@dimen/main_margin_top"
        android:textAllCaps="false"
        android:text="@string/tip_still_image" />

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/btn_start_still_image"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_still_image"
        android:layout_marginTop="@dimen/border_margin"
        android:textAllCaps="false"
        android:text="@string/tip_camera_preview" />

    <Button
        android:id="@+id/btn_multi_surface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/btn_start_still_image"
        app:layout_constraintTop_toBottomOf="@+id/btn_camera"
        android:layout_marginTop="@dimen/border_margin"
        android:textAllCaps="false"
        android:text="@string/tip_share_render_ctx" />

</androidx.constraintlayout.widget.ConstraintLayout>