<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hor_guide_half"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/ver_guide_half"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <SurfaceView
        android:id="@+id/surface_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ver_guide_half"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/hor_guide_half"
        app:layout_constraintDimensionRatio="h,3:4"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textColor="#ff0000"
        android:gravity="center"
        android:textSize="@dimen/bottom_icon_text_size"
        android:text="@string/tip_main_env"
        app:layout_constraintStart_toStartOf="@+id/surface_main"
        app:layout_constraintTop_toTopOf="@+id/surface_main"/>

    <SurfaceView
        android:id="@+id/surface_share_one"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@+id/ver_guide_half"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/hor_guide_half"
        app:layout_constraintDimensionRatio="h,3:4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textColor="#ff0000"
        android:gravity="center"
        android:textSize="@dimen/bottom_icon_text_size"
        android:text="@string/tip_share_env_one"
        app:layout_constraintStart_toStartOf="@+id/surface_share_one"
        app:layout_constraintTop_toTopOf="@+id/surface_share_one"/>

    <SurfaceView
        android:id="@+id/surface_share_two"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ver_guide_half"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hor_guide_half"
        app:layout_constraintDimensionRatio="h,3:4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textColor="#ff0000"
        android:gravity="center"
        android:textSize="@dimen/bottom_icon_text_size"
        android:text="@string/tip_share_env_two"
        app:layout_constraintStart_toStartOf="@+id/surface_share_two"
        app:layout_constraintTop_toTopOf="@+id/surface_share_two"/>

    <SurfaceView
        android:id="@+id/surface_share_two_sub"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@+id/ver_guide_half"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hor_guide_half"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,3:4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textColor="#ff0000"
        android:gravity="center"
        android:textSize="@dimen/bottom_icon_text_size"
        android:text="@string/tip_share_env_two_sub"
        app:layout_constraintStart_toStartOf="@+id/surface_share_two_sub"
        app:layout_constraintTop_toTopOf="@+id/surface_share_two_sub"/>

</androidx.constraintlayout.widget.ConstraintLayout>