<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/layout_adjust_beauty_root"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_adjust_panel"
    android:paddingBottom="@dimen/border_margin"
    android:paddingTop="@dimen/border_margin"
    android:visibility="gone">

    <RelativeLayout
        android:id="@+id/rl_contrast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/border_margin"
        android:layout_marginEnd="@dimen/border_margin">

        <TextView
            android:id="@+id/tv_contrast"
            android:layout_width="@dimen/adjust_text_width"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:gravity="center"
            android:textSize="@dimen/bottom_icon_text_size"
            android:text="@string/tip_contrast"
            tools:ignore="SmallSp" />

        <SeekBar
            android:id="@+id/seek_bar_contrast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tv_contrast"
            android:layout_centerVertical="true"
            android:max="100"
            android:maxHeight="@dimen/seek_bar_max_height" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_sharpen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/rl_contrast"
        app:layout_constraintEnd_toEndOf="@id/rl_contrast"
        app:layout_constraintTop_toBottomOf="@+id/rl_contrast"
        android:layout_marginTop="@dimen/internal_margin">

        <TextView
            android:id="@+id/tv_sharpen"
            android:layout_width="@dimen/adjust_text_width"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:gravity="center"
            android:textSize="@dimen/bottom_icon_text_size"
            android:text="@string/tip_sharpen"
            tools:ignore="SmallSp" />

        <SeekBar
            android:id="@+id/seek_bar_sharpen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tv_sharpen"
            android:layout_centerVertical="true"
            android:max="100"
            android:maxHeight="@dimen/seek_bar_max_height" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_saturation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/rl_contrast"
        app:layout_constraintEnd_toEndOf="@id/rl_contrast"
        app:layout_constraintTop_toBottomOf="@+id/rl_sharpen"
        android:layout_marginTop="@dimen/internal_margin">

        <TextView
            android:id="@+id/tv_saturation"
            android:layout_width="@dimen/adjust_text_width"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:gravity="center"
            android:textSize="@dimen/bottom_icon_text_size"
            android:text="@string/tip_saturation"
            tools:ignore="SmallSp" />

        <SeekBar
            android:id="@+id/seek_bar_saturation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tv_saturation"
            android:layout_centerVertical="true"
            android:max="100"
            android:maxHeight="@dimen/seek_bar_max_height" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>